--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -6,14 +6,16 @@
 <body>
   <h1>Login Page</h1>
   <form action="/login" method="post">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name"><br><br>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email"><br><br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password"><br><br>
     <input type="submit" value="Login">
   </form>
-  <% if (error) { %>
+<% if (errors.length > 0) { %>
+  <% errors.forEach((error) => { %>
     <p style="color: red"><%= error %></p>
-  <% } %>
+  <% }); %>
+<% } %>
 </body>
 </html>
